Minificación de archivos y adicion de rutas restringidas

--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
   <title>Who's best? | Login/Sign up</title>
   <% include partials/head %>
-  <link rel="stylesheet" href="../css/login.css" />
+  <link rel="stylesheet" href="../css/login.min.css" />
 </head>
 <body>
   <% include partials/navbar %>
