Añadido map.loader como módulo

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -24,7 +24,7 @@
 <body>
     <% include partials/navbar %>
     <div id="map"></div>
-    <script src="js/map.loader.min.js"></script>
+    <script src="js/map.loader.min.js" type="module"></script>
     <script>
         $(function() {
             $('#home').addClass('active');
