--- a/client/views/about.ejs
+++ b/client/views/about.ejs
@@ -19,7 +19,6 @@
                 <li>MongoDB</li>
                 <li>IBM DB2</li>
                 <li>Microsoft Access</li>
-                <li>Redis</li>
                 <li>Elasticsearch</li>
                 <li>SQLite</li>
             </ul>
@@ -29,8 +28,8 @@
         <p>For this purpose, <span>Kafka</span> and <span>Spark Streaming</span> are used to process, transform and store data 
             in <span>Elasticsearch</span> and <span>MongoDB</span> databases.
             Besides, <span>Leaflet.js</span> is the framework the map is developed with.</p>
-        <p>All the app is deployed with <span>Node.js</span>, alongside with the API where registered users can make their own requests to get the stored data.
-            You can know more about the API <a href="api.html">here</a>.</p>
+        <p>All the app is deployed with <span>Node.js</span>, alongside with the API REST where registered users can make their own requests to get the stored data.
+            You can know more about the API <a href="/apidocs">here</a>.</p>
         <p>You can find all the code of the project and the instructions to run it on your own on this 
             <a href="https://github.com/francisgalvez/twitter-analysis">GitHub repo</a>. Feel free to customize the Twitter topics or hashtags
             you want to filter the tweets by.</p>
