--- a/client/views/api.ejs
+++ b/client/views/api.ejs
@@ -23,7 +23,7 @@
                 <div class="col-sm-12">
                     <h4>First step: Register and get your API Key</h4><hr>
                     <div class="content">
-                        <p>Our API is protected, so you will have to do your requests using an API key provided after your registration in our page</p>
+                        <p>Our API is protected, so you will have to do your requests using an API token provided after your registration in our page. You can egister <a href="/auth">here</a>.</p>
                     </div>
                 </div>
             </div>
@@ -38,10 +38,13 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <h4>Get ALL tweets</h4><hr>
+                    <h4>How to make a request?</h4><hr>
                     <div class="content">
-                        <p>Let's start making requests! The first and the main one is that which gives you all the stored tweets, without filters</p>
-                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets/all</code></pre>
+                        <p>Let's start making requests! But first let us explain how you have to include your API token in the header of your requests.</p>
+                        <p>After registering, you should log in order to know the API token you have been assigned. Once you have it, you have to include it in the <span>Headers</span>
+                        section of the request, specifically as the value of <span>Authorization</span> key. The pattern this value field has to follow is <span>'Bearer <span style="font-style: italic">token</span>'.</span>
+                        </p>
+                        <p>Now you have full access to our API!</p>
                     </div>
                 </div>
             </div>
@@ -51,7 +54,7 @@
                     <div class="content">
                         <p>You might want to just get certain tweets regarding the existance of their location.
                             You can do it with the following request:</p>
-                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets/geolocation/:option</code></pre>
+                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets/geolocation/<code style="color: #e83e8c;">option</code></code></pre>
                         <p>The "option" field takes a boolean value, where:</p>
                         <ul class="operators">
                             <li><code>true</code> returns all <span>located</span> tweets.</li>
@@ -65,7 +68,7 @@
                     <h4>Get filtered tweets</h4><hr>
                     <div class="content">
                         <p>In this request you have multiple filters to apply to the returned tweets.</p>
-                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets//topics/:topiclist/condition/:operator/geolocation/:option</code></pre>
+                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets/topics/<code style="color: #e83e8c;">topiclist</code>/condition/<code style="color: #e83e8c;">operator</code>/geolocation/<code style="color: #e83e8c;">option</code></code></pre>
                         <p>Apart from the geolocation parameter, which we explained in the previous section, you can add a list 
                             of topics according to the database engines you want to know about. In this sense, there are two possible
                             operators:</p>
@@ -88,7 +91,6 @@
                                 <li>MongoDB</li>
                                 <li>DB2</li>
                                 <li>Access</li>
-                                <li>Redis</li>
                                 <li>Elasticsearch</li>
                                 <li>SQLite</li>
                             </ul>
@@ -101,7 +103,7 @@
                     <h4>Get located/not located tweets since certain hours</h4><hr>
                     <div class="content">
                         <p>In these request you will be able to get the tweets regarding their antiqueness.</p>
-                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets//geolocation/:option/since/:hours</code></pre>
+                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets/geolocation/<code style="color: #e83e8c;">option</code>/since/<code style="color: #e83e8c;">hours</code></code></pre>
                         <p>The <code>hours</code> parameter can take the following values:</p>
                         <ul class="hours">
                             <li>2hours</li>
@@ -117,7 +119,7 @@
                     <div class="content">
                         <p>This call to the API is similar to the <a href="#filtered">"Get filtered tweets" request</a>, but with
                             the hours parameter added, just like we saw in the previous section.</p>
-                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets//topics/:topiclist/condition/:operator/geolocation/:option/since/:hours</code></pre>
+                        <pre><code>http://whosbest-twitter-map.app.di.ual.es/api/tweets/topics/<code style="color: #e83e8c;">topiclist</code>/condition/<code style="color: #e83e8c;">operator</code>/geolocation/<code style="color: #e83e8c;">option</code>/since/<code style="color: #e83e8c;">hours</code></code></pre>
                     </div>
                 </div>
             </div>
